# OrbitDeck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  orbitdeck.spec  pyproject.toml  requirements.txt  run.py  runterm.py
.github/workflows/: build.yml  ci.yml  packages.yml
docs/: ARCHITECTURE.md  ENGINE.md  INSTALL.md  MANUAL.md
orbitdeck/: __init__.py
orbitdeck/data/: dxcc.py  sample_data.py  us_state_boundaries.py  us_states.py  worldmap_data.py
orbitdeck/engine/: __init__.py  analysis.py  celestial.py  dxdoppler.py  linkbudget.py  planning.py  predict.py  propagator.py  satdb.py  sgp4_lite.py
orbitdeck/gui/: alarms.py  app.py  dialogs.py  doppler_sheet.py  exports.py  lab.py  labdialog.py  learnsheet.py  mapdraw.py  net.py  notify.py  oscarlocator.py  pagesize.py  passcard.py  radioedu.py  refsheet.py  reports.py  rovesheet.py  spacewx.py  store.py
orbitdeck/gui/screens/: __init__.py  analytics.py  celestial.py  exportscreen.py  grids.py  groundtrack.py  home.py  illum.py  learn.py  location.py  mutual.py  orbit.py  oscarsim.py  passdetail.py  passes.py  planning.py  polar.py  radio.py  satellites.py  sites.py  spacewx.py  sunmoon.py  tenday.py  track.py  worldmap.py
orbitterm/: README.md  __init__.py  __main__.py  app.py  fmt.py  state.py  ui.py
orbitterm/screens/: analysis_screens.py  catalog.py  illumination.py  live.py  passes.py  progression.py  radio_settings.py
packaging/: .SRCINFO  .SRCINFO-git  BUILD.md  PACKAGING.md  PKGBUILD  PKGBUILD-git  build.py  io.github.prstoetzer.OrbitDeck.metainfo.xml  orbitdeck.desktop  orbitdeck.spec.rpm
packaging/appimage/: AppRun
packaging/debian/: changelog  control  rules
packaging/flatpak/: io.github.prstoetzer.OrbitDeck.yml
tests/: _helpers.py  conftest.py  test_analysis.py  test_celestial.py  test_eclipse.py  test_engine.py  test_gui.py  test_misc.py  test_orbitterm.py  test_oscarlocator.py  test_planning.py  test_propagation.py  test_radio.py  test_reports.py  test_spacewx.py  test_usability.py
web/: CNAME  LICENSE  README.md  app.js  coastlines.js  engine.js  grid.js  index.html  oscarlocator.js  pages.js  sheets.js  surface.js
